# feersum_nlu/api/faq_matchers_api.py
@@ -5,7 +5,7 @@
 
     This is the HTTP API for Feersum NLU. See https://github.com/praekelt/feersum-nlu-api-wrappers for examples of how to use the API.  # noqa: E501
 
-    OpenAPI spec version: 2.0.22
+    OpenAPI spec version: 2.0.24
     Contact: nlu@feersum.io
     Generated by: https://github.com/swagger-api/swagger-codegen.git
 """
@@ -1246,6 +1246,105 @@ class FaqMatchersApi(object):
             post_params=form_params,
             files=local_var_files,
             response_type='list[ClassLabel]',  # noqa: E501
+            auth_settings=auth_settings,
+            async=params.get('async'),
+            _return_http_data_only=params.get('_return_http_data_only'),
+            _preload_content=params.get('_preload_content', True),
+            _request_timeout=params.get('_request_timeout'),
+            collection_formats=collection_formats)
+
+    def faq_matcher_get_params(self, instance_name, **kwargs):  # noqa: E501
+        """Get the editable model parameters of named FAQ matcher.  # noqa: E501
+
+        Get the editable model parameters of FAQ matcher.  # noqa: E501
+        This method makes a synchronous HTTP request by default. To make an
+        asynchronous HTTP request, please pass async=True
+        >>> thread = api.faq_matcher_get_params(instance_name, async=True)
+        >>> result = thread.get()
+
+        :param async bool
+        :param str instance_name: The name of the model instance. (required)
+        :return: ModelParams
+                 If the method is called asynchronously,
+                 returns the request thread.
+        """
+        kwargs['_return_http_data_only'] = True
+        if kwargs.get('async'):
+            return self.faq_matcher_get_params_with_http_info(instance_name, **kwargs)  # noqa: E501
+        else:
+            (data) = self.faq_matcher_get_params_with_http_info(instance_name, **kwargs)  # noqa: E501
+            return data
+
+    def faq_matcher_get_params_with_http_info(self, instance_name, **kwargs):  # noqa: E501
+        """Get the editable model parameters of named FAQ matcher.  # noqa: E501
+
+        Get the editable model parameters of FAQ matcher.  # noqa: E501
+        This method makes a synchronous HTTP request by default. To make an
+        asynchronous HTTP request, please pass async=True
+        >>> thread = api.faq_matcher_get_params_with_http_info(instance_name, async=True)
+        >>> result = thread.get()
+
+        :param async bool
+        :param str instance_name: The name of the model instance. (required)
+        :return: ModelParams
+                 If the method is called asynchronously,
+                 returns the request thread.
+        """
+
+        all_params = ['instance_name']  # noqa: E501
+        all_params.append('async')
+        all_params.append('_return_http_data_only')
+        all_params.append('_preload_content')
+        all_params.append('_request_timeout')
+
+        params = locals()
+        for key, val in six.iteritems(params['kwargs']):
+            if key not in all_params:
+                raise TypeError(
+                    "Got an unexpected keyword argument '%s'"
+                    " to method faq_matcher_get_params" % key
+                )
+            params[key] = val
+        del params['kwargs']
+        # verify the required parameter 'instance_name' is set
+        if ('instance_name' not in params or
+                params['instance_name'] is None):
+            raise ValueError("Missing the required parameter `instance_name` when calling `faq_matcher_get_params`")  # noqa: E501
+
+        collection_formats = {}
+
+        path_params = {}
+        if 'instance_name' in params:
+            path_params['instance_name'] = params['instance_name']  # noqa: E501
+
+        query_params = []
+
+        header_params = {}
+
+        form_params = []
+        local_var_files = {}
+
+        body_params = None
+        # HTTP header `Accept`
+        header_params['Accept'] = self.api_client.select_header_accept(
+            ['application/json'])  # noqa: E501
+
+        # HTTP header `Content-Type`
+        header_params['Content-Type'] = self.api_client.select_header_content_type(  # noqa: E501
+            ['application/json'])  # noqa: E501
+
+        # Authentication setting
+        auth_settings = ['APIKeyHeader', 'APIKeyHeader_old']  # noqa: E501
+
+        return self.api_client.call_api(
+            '/faq_matchers/{instance_name}/params', 'GET',
+            path_params,
+            query_params,
+            header_params,
+            body=body_params,
+            post_params=form_params,
+            files=local_var_files,
+            response_type='ModelParams',  # noqa: E501
             auth_settings=auth_settings,
             async=params.get('async'),
             _return_http_data_only=params.get('_return_http_data_only'),
